Modified K8s Manifests with Harbor Tags

--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: default
       containers:
         - name: server
-          image: checkoutservice
+          image: iaasadmin/microservices_dev/checkoutservice:latest
           ports:
           - containerPort: 5050
           readinessProbe:
