--- a/kubernetes-manifests/loadgenerator.yaml
+++ b/kubernetes-manifests/loadgenerator.yaml
@@ -48,7 +48,7 @@ spec:
           value: "frontend:80"
       containers:
       - name: main
-        image: loadgenerator
+        image: iaasadmin/microservices_dev/loadgenerator:latest
         env:
         - name: FRONTEND_ADDR
           value: "frontend:80"
