--- a/kubernetes-manifests/recommendationservice.yaml
+++ b/kubernetes-manifests/recommendationservice.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: recommendationservice
+        image: iaasadmin/microservices_dev/recommendationservice:latest
         ports:
         - containerPort: 8080
         readinessProbe:
