--- a/kubernetes-manifests/cartservice.yaml
+++ b/kubernetes-manifests/cartservice.yaml
@@ -29,7 +29,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: iaasadmin/microservices_dev/cartservice:latest
+        image: iaasadmin.in/microservices_dev/cartservice:latest
         ports:
         - containerPort: 7070
         env:
