--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -31,9 +31,9 @@ pipeline {
         }
         stage('Build checkoutservice docker image') {
             steps {
-                sh 'cd src/checkoutservice && docker build -t checkoutservice:latest . && docker tag checkoutservice:latest iaasadmin.in/microservices_dev/checkoutservice:latest' && docker push iaasadmin.in/microservices_dev/checkoutservice:latest' }
+                sh 'cd src/checkoutservice && docker build -t checkoutservice:latest . && docker tag checkoutservice:latest iaasadmin.in/microservices_dev/checkoutservice:latest && docker push iaasadmin.in/microservices_dev/checkoutservice:latest'
+            }
         }
-
         stage('Build emailservice docker image') {
                 steps {
                     sh 'cd src/emailservice && docker build -t emailservice:latest . && docker tag emailservice:latest iaasadmin.in/microservices_dev/emailservice:latest && docker push iaasadmin.in/microservices_dev/emailservice:latest'
