modify jenkins file

--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -76,14 +76,7 @@ pipeline {
             }
         stage('Deploy to GKE') {
             steps{
-                step([
-                $class: 'KubernetesEngineBuilder',
-                projectId: env.PROJECT_ID,
-                clusterName: env.CLUSTER_NAME,
-                location: env.LOCATION,
-                manifestPattern: 'manifest.yaml',
-                credentialsId: env.CREDENTIALS_ID,
-                verifyDeployments: true])
+                sh 'cd kubernetes-manifests && kubectl apply -f .'
             }
         }
     }
