--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -1,5 +1,5 @@
 pipeline {
-    agent { label 'production' }
+    agent any
     environment {
         PROJECT_ID = 'jenkins-316214'
         CLUSTER_NAME = 'develop'
