--- a/jenkins.yaml
+++ b/jenkins.yaml
@@ -1,83 +1,74 @@
 pipeline {
     agent any
-    environment {
-        PROJECT_ID = 'jenkins-316214'
-        CLUSTER_NAME = 'develop'
-        LOCATION = 'us-east1-d'
-        CREDENTIALS_ID = 'jenkins-316214'
+    
     }
     stages {
         stage('Checkout code from GitHub Repo') {
               steps{
                   script {
-                      git branch: 'develop', credentialsId: 'jenkins', url: 'git@github.com:Devops-Ramdas/microservices-demo.git'
+                      git branch: 'release', credentialsId: 'jenkins', url: 'git@github.com:Devops-Ramdas/microservices-demo.git'
                   }
               }
           }
         stage('Login to Harbor Registry') {
             steps {
-                sh 'cat ~/harbor | docker login iaasadmin.in --username msdevuser --password-stdin'
+                sh 'cat ~/harbor | docker login iaasadmin.in --username admin --password-stdin'
             }
         }
-        stage('Build adservice docker image') {
+        stage('adservice Pull dev image and push to Prod registry') {
             steps {
-                sh 'cd src/adservice && docker build -t adservice:latest . && docker tag adservice:latest iaasadmin.in/microservices_dev/adservice:latest && docker push iaasadmin.in/microservices_dev/adservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/adservice:latest && docker tag iaasadmin.in/microservices_dev/adservice:latest iaasadmin.in/microservices_prod/adservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/adservice:1.0.0'
             }
         }
-        stage('Build cartservice docker image') {
+        stage('cartservice Pull dev image and push to Prod registry') {
             steps {
-                sh 'cd src/cartservice/src && docker build -t cartservice:latest . && docker tag cartservice:latest iaasadmin.in/microservices_dev/cartservice:latest && docker push iaasadmin.in/microservices_dev/cartservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/cartservice:latest && docker tag iaasadmin.in/microservices_dev/cartservice:latest iaasadmin.in/microservices_prod/cartservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/cartservice:1.0.0'
             }
         }
-        stage('Build checkoutservice docker image') {
+        stage('checkoutservice Pull dev image and push to Prod registry') {
             steps {
-                sh 'cd src/checkoutservice && docker build -t checkoutservice:latest . && docker tag checkoutservice:latest iaasadmin.in/microservices_dev/checkoutservice:latest && docker push iaasadmin.in/microservices_dev/checkoutservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/checkoutservice:latest && docker tag iaasadmin.in/microservices_dev/checkoutservice:latest iaasadmin.in/microservices_prod/checkoutservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/checkoutservice:1.0.0'
             }
         }
-        stage('Build emailservice docker image') {
+        stage('emailservice Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/emailservice && docker build -t emailservice:latest . && docker tag emailservice:latest iaasadmin.in/microservices_dev/emailservice:latest && docker push iaasadmin.in/microservices_dev/emailservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/emailservice:latest && docker tag iaasadmin.in/microservices_dev/emailservice:latest iaasadmin.in/microservices_prod/emailservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/emailservice:1.0.0'
                 }
             }
-        stage('Build currencyservice docker image') {
+        stage('currencyservice Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/currencyservice && docker build -t currencyservice:latest . && docker tag currencyservice:latest iaasadmin.in/microservices_dev/currencyservice:latest && docker push iaasadmin.in/microservices_dev/currencyservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/currencyservice:latest && docker tag iaasadmin.in/microservices_dev/currencyservice:latest iaasadmin.in/microservices_prod/currencyservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/currencyservice:1.0.0'
                 }
             }
-        stage('Build frontend docker image') {
+        stage('frontend Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/frontend && docker build -t frontend:latest . && docker tag frontend:latest iaasadmin.in/microservices_dev/frontend:latest && docker push iaasadmin.in/microservices_dev/frontend:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/frontend:latest && docker tag iaasadmin.in/microservices_dev/frontend:latest iaasadmin.in/microservices_prod/frontend:1.0.0.0 && docker push iaasadmin.in/microservices_prod/frontend:1.0.0'
                 }
             }
-        stage('Build loadgenerator docker image') {
+        stage('loadgenerator Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/loadgenerator && docker build -t loadgenerator:latest . && docker tag loadgenerator:latest iaasadmin.in/microservices_dev/loadgenerator:latest && docker push iaasadmin.in/microservices_dev/loadgenerator:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/loadgenerator:latest && docker tag iaasadmin.in/microservices_dev/loadgenerator:latest iaasadmin.in/microservices_prod/loadgenerator:1.0.0.0 && docker push iaasadmin.in/microservices_prod/loadgenerator:1.0.0'
                 }
             }
-        stage('Build paymentservice docker image') {
+        stage('paymentservice Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/paymentservice && docker build -t paymentservice:latest . && docker tag paymentservice:latest iaasadmin.in/microservices_dev/paymentservice:latest && docker push iaasadmin.in/microservices_dev/paymentservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/paymentservice:latest && docker tag iaasadmin.in/microservices_dev/paymentservice:latest iaasadmin.in/microservices_prod/paymentservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/paymentservice:1.0.0'
                 }
             }
-        stage('Build productcatalogservice docker image') {
+        stage('productcatalogservice Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/productcatalogservice && docker build -t productcatalogservice:latest . && docker tag productcatalogservice:latest iaasadmin.in/microservices_dev/productcatalogservice:latest && docker push iaasadmin.in/microservices_dev/productcatalogservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/productcatalogservice:latest && docker tag iaasadmin.in/microservices_dev/productcatalogservice:latest iaasadmin.in/microservices_prod/productcatalogservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/productcatalogservice:1.0.0'
                 }
             }
-        stage('Build recommendationservice docker image') {
+        stage('recommendationservice Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/recommendationservice && docker build -t recommendationservice:latest . && docker tag recommendationservice:latest iaasadmin.in/microservices_dev/recommendationservice:latest && docker push iaasadmin.in/microservices_dev/recommendationservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/recommendationservice:latest && docker tag iaasadmin.in/microservices_dev/recommendationservice:latest iaasadmin.in/microservices_prod/recommendationservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/recommendationservice:1.0.0'
                 }
             }
-        stage('Build shippingservice docker image') {
+        stage('shippingservice Pull dev image and push to Prod registry') {
                 steps {
-                    sh 'cd src/shippingservice && docker build -t shippingservice:latest . && docker tag shippingservice:latest iaasadmin.in/microservices_dev/shippingservice:latest && docker push iaasadmin.in/microservices_dev/shippingservice:latest'
+                sh 'docker pull iaasadmin.in/microservices_dev/shippingservice:latest && docker tag iaasadmin.in/microservices_dev/shippingservice:latest iaasadmin.in/microservices_prod/shippingservice:1.0.0.0 && docker push iaasadmin.in/microservices_prod/shippingservice:1.0.0'
                 }
             }
-        stage('Deploy to GKE') {
-            steps{
-                sh 'cd kubernetes-manifests && kubectl apply -f .'
-            }
-        }
     }
 }
